--- a/webcomponents.html
+++ b/webcomponents.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset=utf-8>
     <title>Okalpha Web Components</title>
+    <link href="css/webcomcss.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
 </head>
 <body>
     <h1>Okalpha Web components</h1>
@@ -17,26 +19,57 @@
 <!-- Fonts -->
     <section>
         <h2>Fonts</h2>
+            <p>Poppins</p>
     </section>
 <!-- Colors -->
     <section>
         <h3>Colors</h3>
+            <img src="img/red.png" class="img-small" alt="red">
+                <p>#EB2E39</p>
+            <img src="img/blue.png" class="img-small" alt="blue">
+                <p>#3E65AC</p>
+            <img src="img/yellow.png" class="img-small" alt="yellow">
+                <p>#FCDD3A</p>
     </section>
 <!-- Atoms -->
     <section>
         <h4>Atoms</h4>
+            <div class="card">
+                <p class="card__title">Arrows</p>
+                <p>image:</p>
+                <img src="img/hero-section__icon.png" class="img-small" alt="arrow">
+                <p>code:</p>
+            </div>
     </section>
 <!-- Main Nav -->
     <section>
         <h5>Main Navigation</h5>
+            <div class="card">
+                <p class="card__title">.nav-bar</p>
+                <p>image:</p>
+                <img src="img/nav-bar.png" alt="nav bar">
+                <p>code:</p>
+            </div>
     </section>
 <!-- Hero -->
     <section>
         <h6>Hero Section</h6>
+            <div class="card">
+                <p class="card__title">.hero-section</p>
+                <p>image:</p>
+                <img src="img/hero-section.png" alt="hero section">
+                <p>code:</p>
+            </div>
     </section>
 <!-- Portfolio -->
     <section>
         <h7>Portfolio Section</h7>
+            <div class="card">
+                <p class="card__title">.portfolio-section</p>
+                <p>image:</p>
+                <img src="img/portfolio-section.png" alt="portfolio section">
+                <p>code:</p>
+            </div>
     </section>
 </body>
 </html>
