more css changes

--- a/webcomponents.html
+++ b/webcomponents.html
@@ -18,12 +18,12 @@
     </nav>
 <!-- Fonts -->
     <section>
-        <h2>Fonts</h2>
+        <h2 class="section-header">Fonts</h2>
             <p>Poppins</p>
     </section>
 <!-- Colors -->
     <section>
-        <h3>Colors</h3>
+        <h3 class="section-header">Colors</h3>
             <img src="img/red.png" class="img-small" alt="red">
                 <p>#EB2E39</p>
             <img src="img/blue.png" class="img-small" alt="blue">
@@ -33,7 +33,7 @@
     </section>
 <!-- Atoms -->
     <section>
-        <h4>Atoms</h4>
+        <h4 class="section-header">Atoms</h4>
             <div class="card">
                 <p class="card__title">Arrows</p>
                 <p>image:</p>
@@ -43,7 +43,7 @@
     </section>
 <!-- Main Nav -->
     <section>
-        <h5>Main Navigation</h5>
+        <h5 class="section-header">Main Navigation</h5>
             <div class="card">
                 <p class="card__title">.nav-bar</p>
                 <p>image:</p>
@@ -53,7 +53,7 @@
     </section>
 <!-- Hero -->
     <section>
-        <h6>Hero Section</h6>
+        <h6 class="section-header">Hero Section</h6>
             <div class="card">
                 <p class="card__title">.hero-section</p>
                 <p>image:</p>
@@ -63,7 +63,7 @@
     </section>
 <!-- Portfolio -->
     <section>
-        <h7>Portfolio Section</h7>
+        <p class="section-header">Portfolio Section</p>
             <div class="card">
                 <p class="card__title">.portfolio-section</p>
                 <p>image:</p>
